resources/04_deploy_applications/application-01/base/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: application-01
    app.kubernetes.io/component: application-01
    app.kubernetes.io/instance: application-01
  name: application-01
  namespace: application-01
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/component: application-01
      app.kubernetes.io/instance: application-01
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: application-01
        app.kubernetes.io/instance: application-01
    spec:
      containers:
      - image: quay.io/jclaret/chatbot:latest
        imagePullPolicy: Always
        name: application-01
        ports:
        - containerPort: 8001
          protocol: TCP
        resources: {}
      serviceAccountName: default
status: {}
